--- a/Project/TSBK03.vcxproj.filters
+++ b/Project/TSBK03.vcxproj.filters
@@ -63,13 +63,13 @@
     <ClCompile Include="src\Program.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\csTest.cc">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="main.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Boid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -92,9 +92,6 @@
     <ClInclude Include="src\common\LoadTGA.h">
       <Filter>Header Files\common</Filter>
     </ClInclude>
-    <ClInclude Include="src\Camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Drawable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -104,10 +101,16 @@
     <ClInclude Include="src\Program.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\csTest.h">
+    <ClInclude Include="src\Boid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Boid.h">
+    <ClInclude Include="src\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ideas and TODO.txt">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Tests.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
