--- a/Project/TSBK03.vcxproj.filters
+++ b/Project/TSBK03.vcxproj.filters
@@ -110,9 +110,6 @@
     <ClInclude Include="src\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Ideas and TODO.txt">
-      <Filter>Resource Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Fixtures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -160,8 +157,19 @@
     <None Include="src\shaders\update2.comp">
       <Filter>Source Files\Shaders\Compute</Filter>
     </None>
-    <None Include="src\shaders\prefix.comp">
+    <None Include="src\shaders\prefixSpread.comp">
       <Filter>Source Files\Shaders\Compute</Filter>
     </None>
+    <None Include="src\shaders\prefixReduce.comp">
+      <Filter>Source Files\Shaders\Compute</Filter>
+    </None>
+    <None Include="src\shaders\prefixGather.comp">
+      <Filter>Source Files\Shaders\Compute</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="resources\Ideas and TODO.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
