--- a/Project/TSBK03.vcxproj.filters
+++ b/Project/TSBK03.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClCompile Include="src\Camera.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Drawable.cc">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Particles.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -66,13 +63,16 @@
     <ClCompile Include="main.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Boid.cpp">
+    <ClCompile Include="src\Tests.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Fixtures.cpp">
+    <ClCompile Include="src\Fixtures.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Tests.cpp">
+    <ClCompile Include="src\myDrawable.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Boid.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -95,9 +95,6 @@
     <ClInclude Include="src\common\LoadTGA.h">
       <Filter>Header Files\common</Filter>
     </ClInclude>
-    <ClInclude Include="src\Drawable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Particles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -114,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Tests.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\myDrawable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
